--- a/css/styles.css
+++ b/css/styles.css
@@ -41,8 +41,10 @@ h3 {
     
  .image1 {
    
-
-    margin-top :1 em ;
+  
+    margin-top : 20px ;
+    margin-bottom: 150px ; 
+    
     
     }
        
