--- a/css/styles.css
+++ b/css/styles.css
@@ -39,11 +39,11 @@ h3 {
   color: red;
 {   
     
- .image1 {
+ .img1{
    
   
-    margin-top : 1em;
-    margin-bottom: 150px ; 
+    margin-top : 1 em;
+    margin-bottom: 150 px ; 
     
     
     }
