--- a/css/styles.css
+++ b/css/styles.css
@@ -42,9 +42,10 @@ h3 {
  .img1{
    
   
-    margin-top : 1 em;
+    margin-top : 150 px;
     margin-bottom: 150 px ; 
-    
+    margin-left: 150 px ; 
+    margin-right: 150 px ;  
     
     }
        
