--- a/css/styles.css
+++ b/css/styles.css
@@ -41,11 +41,9 @@ h3 {
     
  .img1{
    
-  
-    margin-top : 150 px;
-    margin-bottom: 150 px ; 
-    margin-left: 150 px ; 
-    margin-right: 150 px ;  
+  width = "300";
+     
+  height = "300";
     
     }
        
