--- a/css/styles.css
+++ b/css/styles.css
@@ -34,6 +34,12 @@ h2 {
   color: red;
 }
     
+img.img1{
+    
+    margin-top : 1 em;
+    width: auto;
+    height: 300 px ;
+}
 h3 {
   color: red;
 }   
