--- a/css/styles.css
+++ b/css/styles.css
@@ -43,6 +43,10 @@ h3 {
 .img1{
     
 
-    width: auto;
-    height: 50 px ;
+   
+  border: 5px dashed salmon;
+  border-radius: 5px;
+  cursor: pointer;
+  box-shadow: 5px 5px 20px #ccc;
+
 }    
