--- a/css/styles.css
+++ b/css/styles.css
@@ -42,11 +42,6 @@ h3 {
  
 .img1{
     
-
-   
-  border: 5px dashed salmon;
-  border-radius: 5px;
-  cursor: pointer;
-  box-shadow: 5px 5px 20px #ccc;
+  heigh :300px;
 
 }    
