--- a/css/styles.css
+++ b/css/styles.css
@@ -53,10 +53,10 @@ h3 {
 }
 
 .img1{
-
-width:100%;
-    
+transform: scaleY(0.5);
+transform-origin: top;
+width:100%;   
  height:100%;
- object-fit:fill;
+ object-fit:cover;
 
 }
