--- a/css/styles.css
+++ b/css/styles.css
@@ -54,9 +54,8 @@ h3 {
 
 .img1{
 transform: scaleY(0.5);
-transform-origin: bottom;
-width:100%;   
- height:100%;
+transform-origin: top;
+
  object-fit:cover;
 
 }
