--- a/css/styles.css
+++ b/css/styles.css
@@ -53,9 +53,12 @@ h3 {
 }
 
 .img1{
- height: 100%;
- width : 50%   
- overflow: hidden;  
+    
+ top : 0;   
+ height: 50%;
+    
+ width : 100%   
+   
  object-fit:cover;
 
 }
