--- a/css/styles.css
+++ b/css/styles.css
@@ -54,10 +54,11 @@ h3 {
 
 .img1{
     
- top : 0;   
- height: 50%;
+  width : 100% ;
     
- width : 100%   
+ height: 50%;
+ top : 0;     
+ 
    
  object-fit:cover;
 
