--- a/css/styles.css
+++ b/css/styles.css
@@ -56,10 +56,16 @@ h3 {
     
   width : 100% ;
     
- height: 50%;
- position : top;     
- 
+ height: 100%;
+   
    
  object-fit:cover;
+
+}
+
+body{
+
+background-color : blue;
+margin-top : 1 em;    
 
 }
