--- a/css/styles.css
+++ b/css/styles.css
@@ -57,13 +57,11 @@ h3 {
   width : 100% ;
     
  height: 100%;
-   
-   
+    
  object-fit:cover;
+    
+ margin-top : 400 px;   
 
 }
 
-body{
 
-color : bleu;
-}
