--- a/css/styles.css
+++ b/css/styles.css
@@ -46,7 +46,7 @@ h3 {
    
   height: 400px;
   width: 100%;
-
+   position :relative;
 
 
 }
@@ -58,7 +58,7 @@ h3 {
  height: 100%;
     
  object-fit:cover;
-    
+ position :relative;   
 
 }
 
