--- a/css/styles.css
+++ b/css/styles.css
@@ -45,7 +45,7 @@ h3 {
 .div1{
   
 background-image: url('images/toystory4_wallpaper.jpg')
-background-position: 0 -250px; 
+background-position: 0 - 50px; 
 
 
 }
