--- a/css/styles.css
+++ b/css/styles.css
@@ -45,10 +45,10 @@ h3 {
 .div1{
   
 background-image: url('images/toystory4_wallpaper.jpg')
-background-position: 0 - 50px; 
-
-
+    
+      width : 100% ;
+    
+ height: 600px;
+ 
 }
-
-
 
