--- a/css/styles.css
+++ b/css/styles.css
@@ -46,9 +46,7 @@ h3 {
   
 background-image: url('images/toystory4_wallpaper.jpg')
     
-      width : 100% ;
-    
- height: 600px;
+background-size: 300% 50%;
  
 }
 
