--- a/css/styles.css
+++ b/css/styles.css
@@ -46,7 +46,7 @@ h3 {
   
 background-image: url('images/toystory4_wallpaper.jpg')
     
-background-size: 300% 50%;
+background-size: 300px 100px;
  
 }
 
