--- a/css/styles.css
+++ b/css/styles.css
@@ -52,8 +52,12 @@ h3 {
 
 .img1{
     
- transform : scale(0.7);
-  
+ transform : scale(0.5);
+ width : 100% ;
+    
+ height: 100%;
+    
+ object-fit:cover;
 
 }
 
