--- a/css/styles.css
+++ b/css/styles.css
@@ -46,7 +46,7 @@ h3 {
   
  width : 100% ;
     
- height: 700px;
+ height: 100%;
  
 }
 
@@ -59,5 +59,6 @@ h3 {
     
  object-fit:cover;
 
+   float: top; 
 }
 
