--- a/css/styles.css
+++ b/css/styles.css
@@ -43,21 +43,23 @@ h3 {
    
  
 .div1{
-  
+ display : inline-block; 
  width : 100% ;
     
- height: 100%;
+ height: 50%;
+    
+ overflow : hidden;   
  
 }
 
 .img1{
     
- transform : scale(0.5);
+
  width : 100% ;
     
  height: 100%;
-  margin-top: 0;  
- object-fit:cover;
+  
+ 
 
 
 }
