--- a/css/styles.css
+++ b/css/styles.css
@@ -46,7 +46,7 @@ h3 {
  display : inline-block; 
  width : 100% ;
     
- height: 100px;
+ height: 200px;
     
  overflow : hidden;   
  
@@ -57,7 +57,7 @@ h3 {
 
  width : 100% ;
     
- height: 50px;
+ height: 100%;
   
  object-fit:cover;
 
