--- a/css/styles.css
+++ b/css/styles.css
@@ -40,6 +40,12 @@ h3 {
 }   
     
  
+
+body{
+
+background-color: coral;
+
+}
    
  
 .div1{
@@ -48,13 +54,11 @@ h3 {
     
  height: 400px;
     
-
  
 }
 
 .img1{
     
-
  width : 100% ;
     
  height: 100%;
