--- a/css/styles.css
+++ b/css/styles.css
@@ -71,7 +71,8 @@ object-position: 100% 0;
 
 .div2{
  display : inline-block; 
- margin : 0 auto;
+ width : 200px ;   
+ height: 200px;
     
  
 }
@@ -80,7 +81,9 @@ object-position: 100% 0;
     
     float: left;
     transform: scale(0.5);
-    
+    width : 100% ;
+    height: 100%;
+   object-fit:cover;
 
   
     }
