--- a/css/styles.css
+++ b/css/styles.css
@@ -71,11 +71,7 @@ object-position: 100% 0;
 
 .div2{
  display : inline-block; 
- width : 300px ;   
- height: 300px;
-    
- margin-top  = 0px;    
-    
+      
  
 }
 
@@ -83,9 +79,12 @@ object-position: 100% 0;
     
     float: left;
     transform: scale(0.5);
-    width : 100% ;
-    height: 100%;
-   object-fit:cover;
 
   
     }
+
+.h1p {
+    
+    margin-top : 200px
+    
+}
