--- a/css/styles.css
+++ b/css/styles.css
@@ -69,16 +69,20 @@ object-position: 100% 0;
 }
 
 
-
+.div2{
+ position : absolute; 
+  ;
+    
+ height: 200px;
+    
+ 
+}
 
 .img2 {
     
     float: left;
     transform: scale(0.5);
     position: relative;
-    top : 0px;
-    left: 300px;
-
   
     }
 
