--- a/css/styles.css
+++ b/css/styles.css
@@ -48,22 +48,14 @@ background-color: coral;
 }
    
  
-.div1{
- display : inline-block; 
+
+.img1{
+ position: relative;
+    
  width : 100% ;
     
  height: 400px;
-    
- 
-}
-
-.img1{
-    
- width : 100% ;
-    
- height: 100%;
   
- object-fit:cover;
 object-position: 100% 0;
 
 }
@@ -74,14 +66,8 @@ object-position: 100% 0;
     
     transform: scale(0.5);
     position: absolute;
-    height: 0px;
-    float: left;
+    height: 200px;
+   
     }
 
-.hp1{
 
-  position: absolute;
-  height: 200px
-  float: right;
-
-}
