--- a/css/styles.css
+++ b/css/styles.css
@@ -49,13 +49,22 @@ background-color: coral;
    
  
 
-.img1{
- position: relative;
-    
+.div1{
+ display : inline-block; 
  width : 100% ;
     
  height: 400px;
+    
+ 
+}
+
+.img1{
+    
+ width : 100% ;
+    
+ height: 100%;
   
+ object-fit:cover;
 object-position: 100% 0;
 
 }
