--- a/css/styles.css
+++ b/css/styles.css
@@ -35,7 +35,8 @@ h1 {
   color: #960001;
   font-size : 70px;  
   position: relative;
-  left : 200px;  
+  left : 350px;  
+  top: 20px;  
     
     
 }
