--- a/css/styles.css
+++ b/css/styles.css
@@ -35,8 +35,9 @@ h1 {
   color: #960001;
   font-size : 70px;  
   position: relative;
-  left : 600px;  
-  top: 20px;  
+  left : 550px;  
+  top: 20px; 
+  background-color :  #5582c6; 
     
     
 }
