--- a/css/styles.css
+++ b/css/styles.css
@@ -43,19 +43,19 @@ h1 {
 }
 
 h2 {
-  color: red;
+  color: #960001;
 }
     
 
 h3 {
-  color: red;
+  color: #960001;
 }   
     
  
 
 body{
 
-background-color: coral;
+background-color: #5582c6;
 
 }
    
