--- a/css/styles.css
+++ b/css/styles.css
@@ -37,7 +37,8 @@ h1 {
   position: relative;
   left : 550px;  
   top: 20px; 
-  background-color :  #5582c6; 
+  background-color :  #5582c6;
+  border-color : transparent;  
     
     
 }
