--- a/css/styles.css
+++ b/css/styles.css
@@ -37,7 +37,7 @@ h1 {
   position: absolute;
   left : 550px;  
   top: 20px;
-  margin-bottom : 100px;  
+    
   }
 
 .highlight{
@@ -68,8 +68,7 @@ background-color: #5582c6;
 
 .div1{
  display : inline-block; 
- width : 100% ;
-    
+ width : 100% ;  
  height: 400px;
     
  
@@ -105,4 +104,10 @@ margin-right : 2 em;
     
 margin-left : 1 em;
 
+}
+
+.div1{
+ margin-top : 200px;
+    
+ 
 }
