--- a/css/styles.css
+++ b/css/styles.css
@@ -34,7 +34,7 @@
 h1 {
   color: #960001;
   font-size : 70px;  
-  position: absolute;
+  position: relative;
   left : 550px;  
   top: 20px;
     
@@ -107,7 +107,7 @@ margin-left : 1 em;
 }
 
 .div2{
- margin-top : 200px;
+ margin-top : 300px;
     
  
 }
