--- a/css/styles.css
+++ b/css/styles.css
@@ -105,7 +105,7 @@ margin-bottom : 40px;
 
 .div2{
  margin-top : 340px;
- margin-left : 170px;   
- margin-right : 30px;    
+ margin-left : 165px;   
+ margin-right : auto;    
  
 }
