--- a/css/styles.css
+++ b/css/styles.css
@@ -109,3 +109,14 @@ margin-bottom : 30px;
  margin-right : 0px;    
  
 }
+
+p{
+    color : #ffffff;
+}
+
+.div3{
+ margin-top : 250px;
+ margin-left : 140px;   
+ margin-right : 0px;    
+ 
+}
