--- a/css/styles.css
+++ b/css/styles.css
@@ -92,8 +92,7 @@ object-position: 100% 0;
     transform : scale(0.4);
     position: absolute;
     top: -50px;
-    left:-50px
-      
+    left:-50px     
    
     }
 
@@ -121,4 +120,11 @@ p{
  
 }
 
-
+.img3 {
+    
+    float : left;
+    transform : scale(0.5);
+    position: absolute;
+       
+   
+    }
