--- a/css/styles.css
+++ b/css/styles.css
@@ -124,7 +124,7 @@ p{
     
     float : left;
     transform : scale(0.5);
-    position: absolute;
+    position: relative;
     top: 20px;
     left:-50px;   
    
