--- a/css/styles.css
+++ b/css/styles.css
@@ -34,7 +34,7 @@
 h1 {
   color: #960001;
   font-size : 70px;  
-  position: relative;
+  position: absolute;
   left : 480px;  
   top: 20px;
     
@@ -82,6 +82,7 @@ background-color: #5582c6;
   
  object-fit:cover;
 object-position: 100% 0;
+position: relative;    
 
 }
 
