--- a/css/styles.css
+++ b/css/styles.css
@@ -133,14 +133,14 @@ p{
 
 
 .h3Left{
-display:inline;
+display:inline-block;
 float:left;
 
 }
 
 
 .h3Right{
-display:inline;
+display:inline-block;
 float:right;
 
 }
