--- a/css/styles.css
+++ b/css/styles.css
@@ -182,6 +182,8 @@ right : -140px;
 .h3Left1{
 display:inline-block;
 float:left;
+position: relative;
+top : 1200px;    
     
 }
 
@@ -190,6 +192,7 @@ float:left;
 display:inline-block;
 float:right;
 position: absolute;
-right: 415px;    
+right: 415px;
+top : 1200px;     
 
 }
