--- a/css/styles.css
+++ b/css/styles.css
@@ -183,7 +183,8 @@ right : -140px;
 display:inline-block;
 float:left;
 position: absolute;
-top : 1200px;    
+top : 1260px;  
+left: 350px;    
     
 }
 
