--- a/css/styles.css
+++ b/css/styles.css
@@ -68,7 +68,7 @@ font-size : 17px;
 
 .div1{
  display : inline-block; 
- width : auto ;  
+ width : 100% ;  
  height: 400px;
     
  
@@ -184,7 +184,7 @@ display:inline-block;
 float:left;
 position: absolute;
 top : 1260px;  
-left: 350px;    
+left: 150px;    
     
 }
 
