--- a/css/styles.css
+++ b/css/styles.css
@@ -216,3 +216,14 @@ right: 465px;
 top : 1260px;     
 
 }
+
+
+.img6 {
+    
+    float : left;
+    transform : scale(0.6);
+    position: relative;
+    top: -30px;
+    right:-280px;   
+   
+    }
