--- a/css/styles.css
+++ b/css/styles.css
@@ -223,7 +223,7 @@ top : 1260px;
     float : left;
     transform : scale(0.6);
     position: relative;
-    top: 100px;
-    right: 500px;   
+    top: 1225x;
+    right: 150px;   
    
     }
