--- a/css/styles.css
+++ b/css/styles.css
@@ -235,3 +235,18 @@ top : 1285px;
 right : -322px;
 
 }
+
+.highlight1{
+background-color :  #e2e55f;
+    
+width:100%;
+    
+height: 80px;
+      
+}
+
+
+.p1{
+color: #960001;
+    
+}
