--- a/css/styles.css
+++ b/css/styles.css
@@ -238,15 +238,11 @@ right : -322px;
 
 .highlight1{
 background-color :  #e2e55f;
-    
-width:100%;
-    
-height: 100px;
- 
-color : #960001; 
-    
+color : #960001;     
+width:100%;   
+height: 80px;
+align-items: center;
 position:absolute;
-    
 top: 1500px;
 left: 130px;   
 }
