--- a/css/styles.css
+++ b/css/styles.css
@@ -267,7 +267,9 @@ height: 60px;
 .button{
 position: absolute;
 width: 300px;
-height: 60px;
-color: #79519f;    
+height: 40px;
+color: #ffffff; 
+background-color: #79519f;
+border: none;    
 
 }
